// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when auto login not yet attempted 1`] = `""`;

exports[`should render correctly when logged in 1`] = `
<Page>
  <BrowserResizeListener
    onWindowResize={[Function]}
  />
  <Connect(Notification) />
  <withRouter(Connect(Sidenav))
    onHide={[Function]}
    pathname="/some/path"
    show={false}
  />
  <Connect(Quicksearch)
    onHide={[Function]}
    show={false}
  />
  <PageHeader
    key="header"
  >
    <withRouter(Connect(Header))
      onShowQuicksearch={[Function]}
      onShowSidenav={[Function]}
      showingSidenav={false}
    />
  </PageHeader>
  <PageMain
    key="main"
  >
    <Switch>
      <Route
        component={[Function]}
        exact={true}
        path="/"
      />
      <Route
        component={[Function]}
      />
    </Switch>
  </PageMain>
  <PageFooter
    key="footer"
  >
    <Footer />
  </PageFooter>
</Page>
`;

exports[`should render correctly when not logged in 1`] = `
<Page>
  <BrowserResizeListener
    onWindowResize={[Function]}
  />
  <Connect(Notification) />
  <withRouter(Connect(Sidenav))
    onHide={[Function]}
    pathname="/some/path"
    show={false}
  />
  <Connect(Quicksearch)
    onHide={[Function]}
    show={false}
  />
  <PageMain>
    <Switch>
      <Route
        component={[Function]}
        exact={true}
        path="/login"
      />
      <Redirect
        push={false}
        to="/login"
      />
    </Switch>
  </PageMain>
</Page>
`;
